# ssql

./: .gitignore  README.md  changelog.md  license  pyproject.toml  requirements.txt  setup.py  ssql.py
cfg/: config.cfg
secrets/: keys.cfg
src/: ssql.py  ssql_builder.py
