[project]
authors = [{ name = "Ivar Jönsson", email = "ivajns-9@student.ltu.se" }]
description = "Sql wrapper for handeling sql queries through ssh tunnels"
name = "ssql"
version = "0.1.0"
readme = "README.md"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
